traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:6: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
                  return true}
                         ^Snake:6: warning: enclosing method estPosiFin has result type Unit: return value discarded
                  return true}
                  ^Snake:7: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    droite();return false}
                    ^Snake:7: warning: enclosing method estPosiFin has result type Unit: return value discarded
    droite();return false}
             ^Snake:9: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
   if(estFaceMur()){gauche();return true}
                                    ^Snake:9: warning: enclosing method estPosiFin has result type Unit: return value discarded
   if(estFaceMur()){gauche();return true}
                             ^Snake:10: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    gauche();return false
                    ^Snake:10: warning: enclosing method estPosiFin has result type Unit: return value discarded
    gauche();return false
             ^Snake:12: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
return false
       ^Snake:12: warning: enclosing method estPosiFin has result type Unit: return value discarded
return false
^Snake:21: error: value unary_! is not a member of Unit
    }while(!estPosiFin())
           ^