traversal.snake.Snake.scala.code
def estPosiFin(){
  if(estFaceMur){
  if(getDirection()==Direction.EST){
    gauche()
    if(estFaceMur()){droite()
                  return true}
    droite();return false}
   droite()
   if(estFaceMur()){gauche();return true}
    gauche();return false
  }
return false
}



override def run() {
  do{avance()
    if(estFaceMur() && getDirection()==Direction.EST){droite()}
    if(estFaceMur() && getDirection()==Direction.OUEST){gauche()}
    }while(!estPosiFin())
}